<resources>
    <string name="app_name">ToDoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_todo_screen">Add ToDo Screen</string>
    <string name="enter_your_todo_name">Enter ToDo Name</string>
    <string name="enter_todo_date">Enter ToDo Date</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="add">ADD!!</string>
    <string name="level">Level:</string>
    <string name="add_todo">add_todo</string>
    <string name="todo">ToDo</string>
    <string name="done">Done</string>
    <string name="undone">UnDone</string>
    <string name="update_data">Update Data</string>
    <string name="enter_your_todo">Enter Your ToDo</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="yes">Yes</string>
    <string name="dismiss">Dismiss</string>
</resources>