<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.todo.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/material_dynamic_primary70">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="10dp"
            android:background="@color/cardview_light_background"
            tools:layout_editor_absoluteX="10dp"
            tools:layout_editor_absoluteY="10dp">

            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/add_todo_screen"
                android:textColor="@color/design_default_color_primary_variant"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:hint="@string/enter_your_todo_name"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />

            <EditText
                android:id="@+id/editText_date"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/enter_todo_date"
                android:minHeight="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_name" />


            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:layout_width="350dp"
                android:layout_height="0.1dp"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTitle" />


            <Button
                android:id="@+id/button"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/holo_green_light"
                android:text="@string/_1"
                app:layout_constraintEnd_toStartOf="@+id/button2"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_date" />

            <Button
                android:id="@+id/button2"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="@android:color/holo_orange_dark"
                android:text="@string/_2"
                app:layout_constraintEnd_toStartOf="@+id/button3"
                app:layout_constraintStart_toEndOf="@+id/button"
                app:layout_constraintTop_toBottomOf="@+id/editText_date" />

            <Button
                android:id="@+id/button3"
                android:layout_width="55dp"
                android:layout_height="48dp"
                android:layout_marginTop="24dp"
                android:backgroundTint="#FD0202"
                android:text="@string/_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button2"
                app:layout_constraintTop_toBottomOf="@+id/editText_date" />

            <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/level"
                app:layout_constraintTop_toBottomOf="@id/button2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <TextView
                android:id="@+id/txtLevel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/txt"
                android:layout_marginStart="10dp"
                app:layout_constraintTop_toBottomOf="@id/button2"
                android:text=""/>


            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/add"
                android:backgroundTint="@color/material_dynamic_primary70"
                android:layout_marginBottom="48dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>